<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Worker.workerSignUp"
    android:background="@drawable/fyp2"
    android:backgroundTint="#D1E4F4"
    android:backgroundTintMode="screen">

    <RelativeLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarworker"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:text="@string/signup"
            android:theme="?attr/actionBarTheme"
            android:gravity="center"
            android:title="WORKER SIGN-UP"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/toolbarworker"
            android:layout_marginTop="-18dp"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:text="@string/Name"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/name"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginTop="26dp"
            android:text="@string/email_address"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailaddress"
            android:layout_marginTop="11dp"
            android:text="@string/cnic"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cnic"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_marginTop="-8dp"
            android:ems="10"
            android:hint="@string/enter_cnic"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cnic"
            android:layout_marginTop="7dp"
            android:text="@string/city"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- <EditText
            android:id="@+id/City"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_marginTop="-1dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:minHeight="48dp" />-->

        <Spinner
            android:id="@+id/spinnercity"
            android:layout_width="187dp"
            android:layout_height="48dp"
            android:layout_marginTop="-1dp"
            android:layout_below="@id/textView6"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/Cities" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnercity"
            android:text="@string/phone_number"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView11"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/PhoneNumber"
            android:layout_marginTop="3dp"
            android:text="@string/expertise"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView25"
            android:layout_marginTop="10dp"
            android:background="#75B9F4"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/Plumbing"
                android:layout_width="211dp"
                android:layout_height="48dp"
                android:text="@string/plumbing" />

            <CheckBox
                android:id="@+id/Electrical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electrical" />

            <CheckBox
                android:id="@+id/Carpentry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carpentry" />

            <CheckBox
                android:id="@+id/Paint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paint" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:text="@string/work_experience"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView9"
            android:ems="10"
            android:hint="@string/experience"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Experience"
            android:text="@string/shop_address_optional"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView12"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Address"
            android:text="@string/password"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView13"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass"
            android:text="@string/re_type_password"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/retypepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView14"
            android:ems="10"
            android:hint="@string/re_type"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Addphoto"
            android:layout_marginTop="-4dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/signup"
            android:textColor="@color/white" />


        <ImageView
            android:id="@+id/Addphoto"
            android:layout_width="149dp"
            android:layout_height="68dp"
            android:layout_below="@id/retypepass"
            android:layout_marginTop="-3dp"
            android:src="@drawable/addphoto" />
    </RelativeLayout>
    </ScrollView>