<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.Signup_user"
    android:background="@drawable/fyp2"
    android:backgroundTint="#D1E4F4"
    android:backgroundTintMode="screen"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbaruser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="CUSTOMER SIGN-UP" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/toolbaruser"
            android:layout_marginTop="-15dp"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:text="@string/name"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/Name"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Name"
            android:layout_marginTop="26dp"
            android:text="@string/email_address_"
            android:textColor="#1F33AA"
            android:textSize="15sp"

            android:textStyle="bold" />

        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/enter_email_address"
            android:minHeight="48dp"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmailAddress"
            android:layout_marginTop="30dp"
            android:text="@string/cnic"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/CNIC"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_cnic"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CNIC"
            android:layout_marginTop="30dp"
            android:text="@string/city"
            android:textColor="#1F33AA"
            android:textSize="15sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_width="187dp"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:layout_below="@id/textView6"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/Cities" />
       <!-- <EditText
            android:id="@+id/city"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="City"
            android:inputType="textPersonName"
            android:minHeight="48dp" />-->

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerCity"
            android:layout_marginTop="123dp"
            android:text="Password"
            android:textColor="#1F33AA"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="Password"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password"
            android:layout_marginTop="28dp"
            android:text="Re-Type Password"
            android:textColor="#1F33AA"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/RetypePass"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView8"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="Re-type"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerCity"
            android:layout_marginTop="22dp"
            android:text="Phone Number"
            android:textColor="#1F33AA"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Phonenum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView11"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RetypePass"
            android:textColor="@color/white"
            android:backgroundTint="?attr/colorPrimary"
            android:layout_marginTop="14dp"
            android:text="@string/sign_up" />

    </RelativeLayout>
</ScrollView>